--- a/Stylesheet/style.css
+++ b/Stylesheet/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(./assets/hfyv4.JPG);
+    background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(/assets/hfyv4.JPG);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
