--- a/Stylesheet/style.css
+++ b/Stylesheet/style.css
@@ -85,9 +85,9 @@ body {
         background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(../assets/hfyv1.jpg);
     }
    50% {
-        background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(/assets/hfyv3.jpg);
+        background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(../assets/hfyv3.jpg);
    } 
    100% {
-        background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(/assets/hfyv2.jpg);
+        background-image: linear-gradient(rgba(0, 60, 100, 0.84), rgba(0, 60, 100, 0.84)), url(../assets/hfyv2.jpg);
    }
 }
