created the login and register pages

--- a/Gallery Page/gallery.css
+++ b/Gallery Page/gallery.css
@@ -1,8 +1,16 @@
+/* body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    box-sizing: border-box;
+    background-color: #fffdd0;
+} */
+
 /* Header */
 .activebtn {
     color: #BF4E03;
 
 }
+
 
 /* Section */
 .font-color {
