--- a/Gallery Page/gallery.css
+++ b/Gallery Page/gallery.css
@@ -29,16 +29,25 @@
     border: 1px solid black;
 }
 
-.btn-pri {
+.btn-pry {
     background-color: #0d6efd;
     color: white;
 
 }
-.btn-pri:hover {
+.btn-pry:hover {
     background-color: #0558d4;
     color: white;
 }
 
+.btn-pri {
+    background-color: #BF4E03;
+    color: white;
+}
+
+.btn-sec {
+    background-color: #0d6efd;
+    color: white;
+}
 
 /* Footer */
 .toltip {
